--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pasteleria?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/BackEnd_Pasteleria?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 
